--- a/src/assets/panel/index.html
+++ b/src/assets/panel/index.html
@@ -107,17 +107,26 @@
                             <input type="text" id="outProxy" name="outProxy">
                         </div>
                     </div>
-                    <div class="form-control">
-                        <label for="cleanIPs">
-                            ✨ Clean IPs / Domains
-                            <a class="scanner" href="https://github.com/bia-pain-bache/Cloudflare-Clean-IP-Scanner"
-                                title="Scanner" target="_blank" rel="noopener noreferrer">
-                                <span class="material-symbols-rounded">open_in_new</span>
-                            </a>
-                        </label>
-                        <div>
-                            <textarea type="text" id="cleanIPs" name="cleanIPs" rows="1"></textarea>
-                        </div>
+                    <div class="form-control container">
+                        <details style="width: 100%;">
+                            <summary>
+                                <h4 style="display:inline-flex;">
+                                    ✨ Clean IPs + Proxy Pairs
+                                    <a class="scanner" href="https://github.com/bia-pain-bache/Cloudflare-Clean-IP-Scanner"
+                                        title="Scanner" target="_blank" rel="noopener noreferrer">
+                                        <span class="material-symbols-rounded">open_in_new</span>
+                                    </a>
+                                </h4>
+                            </summary>
+                            <div style="flex-direction: column;">
+                                <button type="button" class="add-noise add-pair" onclick="addCleanProxyRow(true)">
+                                    <span class="material-symbols-rounded">add_circle</span>
+                                    <h4>Add Pair</h4>
+                                </button>
+                                <div id="clean-proxy-rows" class="section">
+                                </div>
+                            </div>
+                        </details>
                     </div>
                     <div class="form-control">
                         <label for="VLConfigs">⚙️ Protocols</label>
@@ -189,46 +198,7 @@
                             </select>
                         </div>
                     </div>
-                    <div class="container">
-                        <div class="section">
-                            <h4><span class="material-symbols-rounded">tune</span> Proxy IP</h4>
-                            <div class="form-control">
-                                <label for="proxyIPMode">🎚️ Mode</label>
-                                <div>
-                                    <select id="proxyIPMode" name="proxyIPMode">
-                                        <option value="proxyip">Proxy IP</option>
-                                        <option value="prefix">NAT64</option>
-                                    </select>
-                                </div>
-                            </div>
-                            <div class="form-control">
-                                <label for="proxyIPs">
-                                    📍 Proxy IPs / Domains
-                                    <a class="scanner"
-                                        href="https://www.nslookup.io/domains/bpb.yousef.isegaro.com/dns-records/"
-                                        title="Proxy IPs" target="_blank" rel="noopener noreferrer">
-                                        <span class="material-symbols-rounded">open_in_new</span>
-                                    </a>
-                                </label>
-                                <div>
-                                    <textarea type="text" id="proxyIPs" name="proxyIPs" rows="1"></textarea>
-                                </div>
-                            </div>
-                            <div class="form-control">
-                                <label for="prefixes">
-                                    📍 NAT64 Prefixes
-                                    <a class="scanner"
-                                        href="https://github.com/bia-pain-bache/BPB-Worker-Panel/blob/main/docs/NAT64Prefixes.md"
-                                        title="NAT64 prefixes" target="_blank" rel="noopener noreferrer">
-                                        <span class="material-symbols-rounded">open_in_new</span>
-                                    </a>
-                                </label>
-                                <div>
-                                    <textarea type="text" id="prefixes" name="prefixes" rows="1"></textarea>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    <input type="hidden" id="proxyIPMode" name="proxyIPMode" value="proxyip">
                     <div class="container">
                         <div class="section">
                             <h4><span class="material-symbols-rounded">tune</span> Custom CDN</h4>
@@ -1042,7 +1012,8 @@
             <div class="output-container">
                 <span id="doh" class="output"></span>
             </div>
-            <span class="material-symbols-rounded" onclick="copyToClipboard(document.getElementById('doh').textContent)">
+            <span class="material-symbols-rounded"
+                onclick="copyToClipboard(document.getElementById('doh').textContent)">
                 content_copy
             </span>
         </div>
